# atom-architect

./: .gitignore  CMakeLists.txt  README.md  atom-architect.nsi  atom-architect.pro  atom-architect.rc  codex.patch  package-windows.sh  qt5.patch  resources.qrc  shortcuts.md  snellius.patch
.github/workflows/: build.yml  docs.yml  linux.yml  windows.yml
assets/configuration/: atoms.json
assets/fragments/: adsorbates.json  hydrocarbons.json
assets/shaders/: axes.fs  axes.vs  canvas.fs  diffuse.fs  diffuse.vs  line.fs  phong.fs  phong.vs  plane.fs  plane.vs  silhouette.vs  simplecanvas.fs  simplecanvas.vs  stereo.vs  stereo_anaglyph_red_cyan.fs  stereo_interlaced_checkerboard_lr.fs  stereo_interlaced_checkerboard_rl.fs  stereo_interlaced_columns_lr.fs  stereo_interlaced_columns_rl.fs  stereo_interlaced_rows_lr.fs  stereo_interlaced_rows_rl.fs
assets/structures/: OUTCAR  POSCAR
assets/themes/darkorange/: darkorange.qss
docs/source/: conf.py  index.rst
packaging/: package.py  package.sh
src/: atomarchitectapplication.cpp  atomarchitectapplication.h  config.h  main.cpp
src/data/: atom.cpp  atom.h  atom_settings.cpp  atom_settings.h  bond.cpp  bond.h  fragment.cpp  fragment.h  matrixmath.h  model.cpp  model.h  model_loader.cpp  model_loader.h  neb_calculation_loader.cpp  neb_calculation_loader.h  structure.cpp  structure.h  structure_loader.cpp  structure_loader.h  structure_operator.cpp  structure_operator.h  structure_saver.cpp  structure_saver.h
src/gui/: anaglyph_widget.cpp  anaglyph_widget.h  analysis_geometry_optimization.cpp  analysis_geometry_optimization.h  analysis_neb.cpp  analysis_neb.h  fragment_selector.cpp  fragment_selector.h  geometry_optimization_graph.cpp  geometry_optimization_graph.h  geometry_optimization_viewer.cpp  geometry_optimization_viewer.h  interface_window.cpp  interface_window.h  logwindow.cpp  logwindow.h  mainwindow.cpp  mainwindow.h  periodic_table.cpp  periodic_table.h  scene.cpp  scene.h  shader_program.cpp  shader_program.h  shader_program_manager.cpp  shader_program_manager.h  shader_program_types.h  structure_analysis.cpp  structure_analysis.h  structure_analysis_graph.cpp  structure_analysis_graph.h  structure_analysis_viewer.cpp  structure_analysis_viewer.h  structure_info_basic_tab.cpp  structure_info_basic_tab.h  structure_info_tab.h  structure_info_widget.cpp  structure_info_widget.h  structure_renderer.cpp  structure_renderer.h  (+4 more)
tests/: data_unit_tests.cpp
